--- a/SimpleTextEncryption.ini
+++ b/SimpleTextEncryption.ini
@@ -1,13 +1,13 @@
 [uwsgi]
 plugin = python3
-pythonpath = /var/www/%n
+pythonpath = /var/www/ste
 module = run:app
 
 master = true
 thunder-lock = true
 enable-threads = true
 
-socket = /var/www/%n/%n.sock
+socket = /var/www/ste/%n.sock
 chmod-socket = 666
 
 vacuum = true
